more general purpouse config setup